--- a/package.json
+++ b/package.json
@@ -9,19 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.35.0",
-    "axios": "^1.13.3",
-    "lucide-react": "^0.562.0",
-    "openai": "^6.16.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "@google/genai": "^1.35.0",
     "react-router-dom": "^7.12.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "lucide-react": "^0.562.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "ts-node": "^10.9.2",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
